@startuml
!include ..\ChargeCommon.puml

package Charge{
    package CampsCharge{
        class CampsRemittance{
            name: string
            created_at: datetime
            payment_date: datetime
            concept: string
        }
        class CampsReceipt {
            amount: float
        }
    }

    CampsReceipt --> Receipt
    CampsRemittance --> Remittance

    CampsReceipt *-- State
    CampsRemittance *-- "1..N" CampsReceipt
}

package Camps{
    class CampsEdition
    class CampsRegistration
}
CampsRemittance o-- "1..N" CampsEdition
CampsReceipt o-- CampsRegistration
CampsEdition --o CampsRegistration
@enduml
